--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "url": "https://github.com/Zinggi/RLayout"
   },
   "peerDependencies": {
-    "react": "0.12.x"
+    "react": "0.13.x"
   },
   "devDependencies": {
-    "react": "^0.12.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-react": "^0.10.0",
     "grunt-webpack": "^1.0.8",
     "jsx-loader": "^0.12.2",
+    "object-assign": "^2.0.0",
+    "react": "^0.13.2",
     "webpack": "^1.4.13",
     "webpack-dev-server": "^1.6.6"
   },
