--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "r-layout",
-  "version": "0.7.0",
+  "version": "0.7.1-beta",
   "author": "Florian Zinggeler",
   "description": "Layout made simple. Screw CSS!",
   "main": "./src/index.jsx",
